fix: 컨트롤러에서 필수 요청 값 검증
필수 파라미터의 null 검증을 API 스펙을 표현하는 컨트롤러와 Request DTO에 선언한다.
Bean Validation으로 중첩 요청까지 검증하고 서비스 호출 전 INVALID_REQUEST를 반환한다.

Decision: 2026-09-16 작업 대화 — Controller와 Request DTO의 null 검증 요청 및 Bean Validation 추가 선택
Constraint: develop 기준의 현재 체크아웃에서 작업하며 별도 워크트리를 만들지 않는다